--- a/public/css/foundation/responsive.sass
+++ b/public/css/foundation/responsive.sass
@@ -1,3 +1,22 @@
-@media only screen and (max-width: 600px)
-  .wrapper
-    width: 90%
+@media only screen and (max-width: 960px)
+  .container
+    width: 95%
+  h1
+    text-align: left
+  h2
+    font-size: 1.2rem
+    padding: 0 10% 0 0
+  footer p
+    width: 100%
+
+@media only screen and (max-width: 720px)
+  section
+    width: 100%
+    &:nth-of-type(1)
+      border-bottom: 2px solid $blue
+    &:nth-of-type(2)
+      padding: 40px 0 0 0
+  .first
+    border-right: none
+  footer p
+    font-size: 1rem
