data amended for jan and feb

--- a/public/css/pages/home.sass
+++ b/public/css/pages/home.sass
@@ -9,7 +9,7 @@
     position: absolute
     top: 0
     left: 0
-    font-weight: normal
+    font-weight: bold
     display: inline-block
     opacity: 0
     &:nth-child(1)
