--- a/public/css/foundation/responsive.sass
+++ b/public/css/foundation/responsive.sass
@@ -2,7 +2,7 @@
   .container
     width: 95%
   h1
-    text-align: left
+    letter-spacing: 0.4rem
   h2
     font-size: 1.2rem
     padding: 0 10% 0 0
@@ -10,6 +10,8 @@
     width: 100%
 
 @media only screen and (max-width: 720px)
+  h1
+    letter-spacing: 0.2rem
   section
     width: 100%
     &:nth-of-type(1)
