--- a/public/css/foundation/typography.sass
+++ b/public/css/foundation/typography.sass
@@ -1,11 +1,11 @@
 // ----- Fonts ----- //
-$opensans: 'Open Sans', Helvetica Neue, sans-serif
-$peralta: 'Peralta', cursive
+$sans: 'Open Sans', Helvetica Neue, sans-serif
+$serif: 'Peralta', cursive
 
 body
 	font-size: 16px //12pt
 	line-height: 1.25 // 20px
-	font-family: $opensans
+	font-family: $sans
 	font-style: normal
 
 h1, h2, h3, h4, h5, h6
@@ -14,18 +14,18 @@ h1, h2, h3, h4, h5, h6
 h1
 	// we build
 	font-size: 10rem
-	font-family: $peralta
+	font-family: $serif
 	font-weight: bold
 	color: white
 	text-align: center
 	text-shadow: 0px 1px 26px rgba(0,0,0,0.5)
-	letter-spacing: 0.7rem
+	letter-spacing: 0.5rem
 
 h2
 	// tagline
 	font-size: 1.55rem
 	text-align: left
-	font-family: $opensans
+	font-family: $sans
 	color: $yellow
 	font-weight: 200
 
@@ -33,7 +33,7 @@ h3
 	// open event and open source
 	font-size: 2.5rem
 	text-align: center
-	font-family: $peralta
+	font-family: $serif
 	color: $blue
 
 p
