--- a/public/css/foundation/typography.sass
+++ b/public/css/foundation/typography.sass
@@ -18,8 +18,11 @@ h1
 	font-weight: bold
 	color: white
 	text-align: center
-	text-shadow: 0px 1px 26px rgba(0,0,0,0.5)
+	text-shadow: 0 1px 26px rgba(0,0,0,0.5)//, 0 0 2px rgba(255,255,255,0.3)
 	letter-spacing: 0.5rem
+	// font-smooth: always
+	// transform: rotate(-0.0000000001deg)
+	// -webkit-font-smoothing: subpixel-antialiased
 
 h2
 	// tagline
