animation for other browsers

--- a/public/css/foundation/typography.sass
+++ b/public/css/foundation/typography.sass
@@ -1,6 +1,6 @@
 // ----- Fonts ----- //
 $sans: 'Open Sans', Helvetica Neue, sans-serif
-$serif: 'Peralta', cursive
+$serif: 'Peralta', sans-serif
 
 body
 	font-size: 16px //12pt
@@ -18,7 +18,7 @@ h1
 	font-weight: bold
 	color: white
 	text-align: center
-	text-shadow: 0 1px 26px rgba(0,0,0,0.5)//, 0 0 2px rgba(255,255,255,0.3)
+	text-shadow: 0 0 4px white, 0 1px 26px rgba(0, 0, 0, 0.5)
 	letter-spacing: 0.5rem
 	// font-smooth: always
 	// transform: rotate(-0.0000000001deg)
