--- a/views/index.jade
+++ b/views/index.jade
@@ -9,6 +9,9 @@ html(lang='en')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
     link(href='http://fonts.googleapis.com/css?family=Peralta|Open+Sans', rel='stylesheet', type='text/css')
     link(rel='stylesheet', href='public/css/style.css')
+    script(type="text/javascript", src="//use.typekit.net/nrp0ohw.js")
+    script(type="text/javascript")
+      try{Typekit.load();}catch(e){}
 
     //- Gridline for dev environment
     //- link(rel='stylesheet', href='public/css/hugrid.css')
