added iOS devscout meetup

--- a/views/index.jade
+++ b/views/index.jade
@@ -49,8 +49,13 @@ html(lang='en')
                 p.tagline Spelunking your Credit Card
             li
               a(href='https://www.facebook.com/events/495277747161799/')
-                p Singapore Makers Meetup
+                p iOS Dev Scout Jan Meetup
                   span on 15 Jan
+                p.tagline iOS
+            li
+              a(href='http://www.meetup.com/makermeetup/Singapore-SG/832532/')
+                p Singapore Makers Meetup
+                  span on 17 Jan
                 p.tagline Makerspace, Mini Maker Faire, 3D printing with Shapifi, giant cardboard sculptures, Playlab.me building heartware
             li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93217852/')
