--- a/public/css/foundation/typography.sass
+++ b/public/css/foundation/typography.sass
@@ -1,6 +1,6 @@
 // ----- Fonts ----- //
 $sans: 'Open Sans', Helvetica Neue, sans-serif
-$serif: 'Peralta', sans-serif
+$serif: 'Vollkorn', sans-serif
 
 body
 	font-size: 16px //12pt
@@ -14,15 +14,13 @@ h1, h2, h3, h4, h5, h6
 h1
 	// we build
 	font-size: 10rem
+	opacity: 0
 	font-family: $serif
-	font-weight: bold
+	font-weight: 700
 	color: white
 	text-align: center
-	text-shadow: 0 0 4px white, 0 1px 26px rgba(0, 0, 0, 0.5)
+	text-shadow: 0 0 4px white, 0 2px 26px rgba(0, 0, 0, 0.5)
 	letter-spacing: 0.5rem
-	// font-smooth: always
-	// transform: rotate(-0.0000000001deg)
-	// -webkit-font-smoothing: subpixel-antialiased
 
 h2
 	// tagline
@@ -31,6 +29,7 @@ h2
 	font-family: $sans
 	color: $yellow
 	font-weight: 200
+	margin-top: -3%
 
 h3
 	// open event and open source
@@ -38,6 +37,7 @@ h3
 	text-align: center
 	font-family: $serif
 	color: $blue
+	font-weight: 700
 
 p
 	font-size: 1.2rem
