added new open source repo

--- a/views/index.jade
+++ b/views/index.jade
@@ -83,19 +83,24 @@ html(lang='en')
                   span updated 1 day ago
                 p.tagline A unified front-end for different queuing backends
             li
-              a(href='https://github.com/honcheng/PaperFold-for-iOS')
-                p PaperFold for iOS
-                  span updated 3 days ago
-                p.tagline Paper folding animation for iOS
-            li
               a(href='https://github.com/MugunthKumar/MKNetworkKit')
                 p MKNetworkKit
-                  span updated 4 days ago
+                  span updated 1 day ago
                 p.tagline Full ARC based Networking Kit for iOS 4+ devices
             li
+              a(href='https://github.com/lxcid/LXReorderableCollectionViewFlowLayout')
+                p LXReorderable Collection View Flow Layout
+                  span updated 4 days ago
+                p.tagline Extends `UICollectionViewFlowLayout` to support reordering of cells
+            li
+              a(href='https://github.com/honcheng/PaperFold-for-iOS')
+                p PaperFold for iOS
+                  span updated 5 days ago
+                p.tagline Paper folding animation for iOS
+            li
               a(href='https://github.com/cheeaun/hackerweb')
-                p Hacker Web
-                  span updated 16 days ago
+                p HackerWeb
+                  span updated 17 days ago
                 p.tagline A simply readable Hacker News web app
             li
               a(href='https://github.com/MugunthKumar/MKStoreKit')
