queries github api

--- a/public/css/foundation/typography.sass
+++ b/public/css/foundation/typography.sass
@@ -43,6 +43,8 @@ p
 	font-size: 1.2rem
 	color: $red-light
 	margin: 0
+	text-overflow: ellipsis
+	overflow: hidden
 	&.tagline
 		color: $grey
 		font-size: 0.9rem
