--- a/views/index.jade
+++ b/views/index.jade
@@ -3,12 +3,18 @@ html(lang='en')
 
   head
     meta(charset='utf-8')
-    title We Build | open events & open source for the curious folks
-    meta(name='description', content='a list of free open events and open source libraries for the curious folks who love to make things!')
 
+    title We Build SG
+    meta(name='description', content='a list of free open events and open source libraries for the curious folks who love to make things!')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
+
     link(href='http://fonts.googleapis.com/css?family=Vollkorn:400,700|Open+Sans', rel='stylesheet', type='text/css')
     link(rel='stylesheet', href='public/css/style.css')
+
+    link(rel="apple-touch-icon", href="public/apple-touch-icon.png")
+    link(rel="apple-touch-icon", sizes="72x72", href="public/apple-touch-icon-72x72-precomposed.png")
+    link(rel="apple-touch-icon", sizes="114x114", href="public/apple-touch-icon-114x114-precomposed.png")
+    link(rel="apple-touch-icon", sizes="144x144", href="public/apple-touch-icon-144x144-precomposed.png")
 
     //- Gridline for dev environment
     //- link(rel='stylesheet', href='public/css/hugrid.css')
