added facebook open graph and meta data

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,15 +6,25 @@ html(lang='en')
 
     title We Build SG
     meta(name='description', content='a list of free open events and open source libraries for the curious folks who love to make things!')
+    meta(name='keywords', content='Singapore, SG, open community, open source, software, hardware, programming, design, maker movement, free events, free tech events')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
+
+    meta(property='og:image', content='public/logo.png')
+    meta(property='og:url', content='http://www.webuild.sg')
+    meta(property='og:site_name', content='www.webuild.sg')
+    meta(property='og:title', content='We Build SG')
+    meta(property='og:description', content='a list of free open events and open source libraries for the curious folks who love to make things!')
+    meta(property='og:type', content='website')
+    //- meta(property='og:video', content='http://youtube.googleapis.com/v/KZrhh71bvlg')
+    //- meta(property=”og:video:type”, content=”application/x-shockwave-flash”)
 
     link(href='http://fonts.googleapis.com/css?family=Vollkorn:400,700|Open+Sans', rel='stylesheet', type='text/css')
     link(rel='stylesheet', href='public/css/style.css')
 
-    link(rel="apple-touch-icon", href="public/apple-touch-icon.png")
-    link(rel="apple-touch-icon", sizes="72x72", href="public/apple-touch-icon-72x72-precomposed.png")
-    link(rel="apple-touch-icon", sizes="114x114", href="public/apple-touch-icon-114x114-precomposed.png")
-    link(rel="apple-touch-icon", sizes="144x144", href="public/apple-touch-icon-144x144-precomposed.png")
+    link(rel='apple-touch-icon', href='public/apple-touch-icon.png')
+    link(rel='apple-touch-icon', sizes='72x72', href='public/apple-touch-icon-72x72-precomposed.png')
+    link(rel='apple-touch-icon', sizes='114x114', href='public/apple-touch-icon-114x114-precomposed.png')
+    link(rel='apple-touch-icon', sizes='144x144', href='public/apple-touch-icon-144x144-precomposed.png')
 
     //- Gridline for dev environment
     //- link(rel='stylesheet', href='public/css/hugrid.css')
@@ -22,7 +32,7 @@ html(lang='en')
   body
 
     //if lt IE 9
-      p.chromeframe Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a cool new browser</a> to experience this site!
+      p.chromeframe Your browser is <em>ancient!</em> <a href='http://browsehappy.com/'>Upgrade to a cool new browser</a> to experience this site!
 
     div.wrapper
       header
