--- a/views/index.jade
+++ b/views/index.jade
@@ -26,6 +26,8 @@ html(lang='en')
     link(rel='apple-touch-icon', sizes='114x114', href='public/apple-touch-icon-114x114-precomposed.png')
     link(rel='apple-touch-icon', sizes='144x144', href='public/apple-touch-icon-144x144-precomposed.png')
 
+    script(type='text/javascript', src='public/js/require.js', data-main='public/js/config')
+
     //- Gridline for dev environment
     //- link(rel='stylesheet', href='public/css/hugrid.css')
 
@@ -108,9 +110,9 @@ html(lang='en')
             [sge calendar](http://sge.io/calendar/)
       a(href='http://sayan.ee').credit handmade by sayanee
 
-    script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js')
-    script(src='//raw.github.com/timrwood/moment/1.7.2/min/moment.min.js')
-    script(src='public/js/script.js')
+    //- script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js')
+    //- script(src='//raw.github.com/timrwood/moment/1.7.2/min/moment.min.js')
+    //- script(src='public/js/script.js')
 
     //- Gridline for dev environment
     //- script(src='//raw.github.com/simanek/Heads-Up-Grid/master/headsupgrid/hugrid.js')
@@ -125,4 +127,3 @@ html(lang='en')
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
-
