--- a/views/index.jade
+++ b/views/index.jade
@@ -69,6 +69,11 @@ html(lang='en')
                   span on 15 Jan
                 p.tagline iOS
             li
+              a(href='https://www.facebook.com/events/102538316589122/')
+                p FWUG Meetup #1
+                  span on 16 Jan
+                p.tagline Adobe Fireworks, Extensions, Workflow
+            li
               a(href='http://www.meetup.com/makermeetup/Singapore-SG/832532/')
                 p Singapore Makers Meetup
                   span on 17 Jan
