--- a/views/index.jade
+++ b/views/index.jade
@@ -89,6 +89,11 @@ html(lang='en')
                   span on 18 Jan
                 p.tagline HTML5 audio & video, WebRTC, Camera API
             li
+              a(href='https://www.facebook.com/events/387625811327260')
+                p Frontend Developers User group Meetup
+                  span on 21 Jan
+                p.tagline TypeScript, Backbone.js, Startup Academy
+            li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93217852/')
                 p HTML5 Series - Chapter 2
                   span on 1 Feb
