--- a/views/index.jade
+++ b/views/index.jade
@@ -58,16 +58,16 @@ html(lang='en')
         section
           h3 open events
           ul.open-list.first
-            li
-              a(href='https://www.facebook.com/events/535254489832316/')
-                p Creative Crew January Meetup
-                  span on 8 Jan
-                p.tagline Audio editing with Audacity, Tips & Tricks with Photoshop, Night Sky Photography
-            li
-              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/94023812/')
-                p Singapore Ruby Group
-                  span on 8 Jan
-                p.tagline Spelunking your Credit Card
+            //- li
+            //-   a(href='https://www.facebook.com/events/535254489832316/')
+            //-     p Creative Crew January Meetup
+            //-       span on 8 Jan
+            //-     p.tagline Audio editing with Audacity, Tips & Tricks with Photoshop, Night Sky Photography
+            //- li
+            //-   a(href='http://www.meetup.com/Singapore-Ruby-Group/events/94023812/')
+            //-     p Singapore Ruby Group
+            //-       span on 8 Jan
+            //-     p.tagline Spelunking your Credit Card
             li
               a(href='https://www.facebook.com/events/495277747161799/')
                 p iOS Dev Scout Jan Meetup
