--- a/views/index.jade
+++ b/views/index.jade
@@ -69,10 +69,15 @@ html(lang='en')
             //-       span on 8 Jan
             //-     p.tagline Spelunking your Credit Card
             li
+              a(href='https://www.facebook.com/events/531416000216739')
+                p DestrActions 2013-01 SG
+                  span on 15 Jan
+                p.tagline New year, new venue, 2 new challenges!
+            li
               a(href='https://www.facebook.com/events/495277747161799/')
                 p iOS Dev Scout Jan Meetup
                   span on 15 Jan
-                p.tagline iOS
+                p.tagline Useful Non-Apple Frameworks, Interviews by Mobile Startups
             li
               a(href='https://www.facebook.com/events/102538316589122/')
                 p FWUG Meetup #1
