Styling for stars

--- a/public/css/foundation/typography.sass
+++ b/public/css/foundation/typography.sass
@@ -55,6 +55,8 @@ p
 	span
 		margin: 0 0 0 10px
 		font-size: 0.9rem
+		&.stars
+			color: lighten($red-light, 10%)
 
 a.credit
 	padding: 10px 0 40px 0
