--- a/public/css/pages/home.sass
+++ b/public/css/pages/home.sass
@@ -38,6 +38,9 @@
       padding: 10px
       @include border-radius(5px)
       text-decoration: none
+    .stars
+      float: right
+      padding-top: 6px
 
 .first
   border-right: 2px solid $blue
