added mobile photography workshop

--- a/views/index.jade
+++ b/views/index.jade
@@ -97,7 +97,12 @@ html(lang='en')
               a(href='https://www.facebook.com/events/387625811327260')
                 p Frontend Developers User group Meetup
                   span on 21 Jan
-                p.tagline TypeScript, Backbone.js, Startup Academy
+                p.tagline TypeScript, Backbone.js, Source Maps, Startup Academy
+            li
+              a(href='http://ccsg-workshop0113.eventbrite.com/')
+                p Mobile Photography Workshop
+                  span on 26 Jan
+                p.tagline Flickr, Mobile Photo, Camera, Composition, Evernote, Creative Commons
             li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93217852/')
                 p HTML5 Series - Chapter 2
