--- a/views/index.jade
+++ b/views/index.jade
@@ -94,6 +94,11 @@ html(lang='en')
                   span on 18 Jan
                 p.tagline HTML5 audio & video, WebRTC, Camera API
             li
+              a(href='http://www.plugfest.asia/workshops/20130119')
+                p PlugFest Android Deep Dive
+                  span on 18 Jan
+                p.tagline Android Development, Google Play, Monetising Apps, Android Development with Samsung
+            li
               a(href='https://www.facebook.com/events/387625811327260')
                 p Frontend Developers User group Meetup
                   span on 21 Jan
