--- a/views/index.jade
+++ b/views/index.jade
@@ -109,6 +109,11 @@ html(lang='en')
                   span on 26 Jan
                 p.tagline Flickr, Mobile Photo, Camera, Composition, Evernote, Creative Commons
             li
+              a(href='http://sg.hackandtell.org/')
+                p SG Hack and Tell
+                  span on 29 Jan
+                p.tagline 5 min lightning talks on what we hacked on
+            li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93217852/')
                 p HTML5 Series - Chapter 2
                   span on 1 Feb
