events and agenda

--- a/views/index.jade
+++ b/views/index.jade
@@ -89,11 +89,6 @@ html(lang='en')
                   span on 17 Jan
                 p.tagline Makerspace, Mini Maker Faire, 3D printing with Shapifi, giant cardboard sculptures, Playlab.me building heartware
             li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93216432/')
-                p HTML5 Series - Chapter 1
-                  span on 18 Jan
-                p.tagline HTML5 audio & video, WebRTC, Camera API
-            li
               a(href='http://www.plugfest.asia/workshops/20130119')
                 p PlugFest Android Deep Dive
                   span on 19 Jan
@@ -102,7 +97,12 @@ html(lang='en')
               a(href='https://www.facebook.com/events/387625811327260')
                 p Frontend Developers User group Meetup
                   span on 21 Jan
-                p.tagline TypeScript, Backbone.js, Source Maps, Startup Academy
+                p.tagline TypeScript, Backbone.js, Source Maps, Hacker Web, Startup Academy
+            li
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93216432/')
+                p HTML5 Series - Chapter 1
+                  span on 21 Jan
+                p.tagline HTML5 audio & video, WebRTC, Camera API
             li
               a(href='http://ccsg-workshop0113.eventbrite.com/')
                 p Mobile Photography Workshop
