--- a/views/index.jade
+++ b/views/index.jade
@@ -78,11 +78,11 @@ html(lang='en')
             //-     p iOS Dev Scout Jan Meetup
             //-       span on 15 Jan
             //-     p.tagline Useful Non-Apple Frameworks, Interviews by Mobile Startups
-            li
-              a(href='https://www.facebook.com/events/102538316589122/')
-                p FWUG Meetup #1
-                  span on 16 Jan
-                p.tagline Adobe Fireworks, Extensions, Workflow
+            //- li
+            //-   a(href='https://www.facebook.com/events/102538316589122/')
+            //-     p FWUG Meetup #1
+            //-       span on 16 Jan
+            //-     p.tagline Adobe Fireworks, Extensions, Workflow
             li
               a(href='http://www.meetup.com/makermeetup/Singapore-SG/832532/')
                 p Singapore Makers Meetup
