--- a/views/index.jade
+++ b/views/index.jade
@@ -124,10 +124,20 @@ html(lang='en')
                   span on 29 Jan
                 p.tagline 5 min lightning talks on what we hacked on
             li
+              a(href='http://www.meetup.com/devops-singapore/events/99812762/')
+                p DevOps Singapore Meetup #10: Stacko
+                  span on 30 Jan
+                p.tagline Stacko is a gem that make it easy to spin up an EC2 instance
+            li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93217852/')
                 p HTML5 Series - Chapter 2
                   span on 1 Feb
                 p.tagline Online & Offline events, Offline resources, IndexDB, DOM & Local Storage
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/99986652/')
+                p talk.js
+                  span on 4 Feb
+                p.tagline Hypermedia APIs, Frontend UI: Spaghetti vs. State Machine
             li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93219302/')
                 p HTML5 Series - Chapter 3
