removed older events

--- a/views/index.jade
+++ b/views/index.jade
@@ -83,16 +83,16 @@ html(lang='en')
             //-     p FWUG Meetup #1
             //-       span on 16 Jan
             //-     p.tagline Adobe Fireworks, Extensions, Workflow
-            li
-              a(href='http://www.meetup.com/makermeetup/Singapore-SG/832532/')
-                p Singapore Makers Meetup
-                  span on 17 Jan
-                p.tagline Makerspace, Mini Maker Faire, 3D printing with Shapifi, giant cardboard sculptures, Playlab.me building heartware
-            li
-              a(href='http://www.plugfest.asia/workshops/20130119')
-                p PlugFest Android Deep Dive
-                  span on 19 Jan
-                p.tagline Android Development, Google Play, Monetising Apps, Android Development with Samsung
+            //- li
+            //-   a(href='http://www.meetup.com/makermeetup/Singapore-SG/832532/')
+            //-     p Singapore Makers Meetup
+            //-       span on 17 Jan
+            //-     p.tagline Makerspace, Mini Maker Faire, 3D printing with Shapifi, giant cardboard sculptures, Playlab.me building heartware
+            //- li
+            //-   a(href='http://www.plugfest.asia/workshops/20130119')
+            //-     p PlugFest Android Deep Dive
+            //-       span on 19 Jan
+            //-     p.tagline Android Development, Google Play, Monetising Apps, Android Development with Samsung
             li
               a(href='https://www.facebook.com/events/387625811327260')
                 p Frontend Developers User group Meetup
